# Qt-StockManaging

./: .gitignore  CMakeLists.txt  main.cpp  mainWindow.cpp  mainWindow.h
components/: ButtonWidgetItem.cpp  ButtonWidgetItem.h  MenuButton.cpp  MenuButton.h  SearchInput.cpp  SearchInput.h
constants/type/: CompanySearchType.cpp  UserSearchType.cpp
database/: DBExceptionHandler.cpp  DBExceptionHandler.h  SQLController.cpp  SQLController.h  databaseConnection.cpp  databaseConnection.h
database/dto/: Address.cpp  Company.cpp  Member.cpp  MyStock.cpp  Schema.cpp
panels/: MainMenu.cpp  MainMenu.h  StockMenu.cpp  StockMenu.h  UserMenu.cpp  UserMenu.h
panels/interesting/: AddingInterestingCompany.cpp  AddingInterestingCompany.h  interestingCompany.cpp  interestingCompany.h
panels/schmas/: CheckingSchema.cpp  CheckingSchema.h
panels/stock/: MyStock.cpp  MyStock.h
panels/user/: Account.cpp  Account.h  Dividend.cpp  Dividend.h  Following.cpp  Following.h  MyStock.h  SignUp.cpp  SignUp.h  StockMenu.cpp  StockMenu.h  UserMenu.cpp  UserMenu.h  Withdrawal.cpp  Withdrawal.h  interestingCompany.cpp  interestingCompany.h
